fixing scrolling on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -54,14 +54,6 @@ html {
   font-weight: bold;
   line-height: 1.1em; }
   #site #yield_container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
     max-width: 100vw;
     overflow-x: hidden; }
   #site a:link,
